# ducktools-scriptmetadata

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: auto_test.yml  publish_to_pypi.yml  publish_to_testpypi.yml
examples/: pep-723-sample.py
perf/: ducktools_parse.py  import_parse.py  import_parse_requirements.py  import_parse_toml.py
src/ducktools/: pep723parser.py
src/ducktools/script_metadata_parser/: __init__.py
src/ducktools/scriptmetadata/: __init__.py
tests/: test_compliance.py  test_format_parser.py  test_internals.py  test_vs_regex.py
tests/compliance_data/: README.md  __init__.py  multiple_blocks_joined.py  multiple_closing_lines.py  multiple_opening_lines.py  repeated_block_error.py  unclosed_block_eof.py  unclosed_block_example.py
tests/example_files/: example_no_pyproject_block.py  invalid_block_name.py  invalid_double_block.py  invalid_repeated_block.py  multi_block_discrepency.py  multiple_block_warnings.py  pep-723-sample-noclose-eof.py  pep-723-sample-noclose.py  pep-723-sample.py  toml_warning.py
tests/test_data/: __init__.py  basic_pep_example.py  multiple_blocks_joined.py  multiple_closing_lines.py  multiple_opening_lines.py  no_block.py  repeated_block_error.py  unclosed_block_eof.py  unclosed_block_example.py
